Ensure deferred deletion of WebEngineQuickWidget

In some cases the event loop exits before
WebEngineQuickWidget::deletLater is called.
In this scenario the object will not be deleted.

Fixes: QTBUG-126401
Pick-to: 6.8 6.7 6.6
Change-Id: I9de8640c6f8d3b0f04665bce664f8b91523ddb69